--- a/more-express/ejs-demo/views/home.ejs
+++ b/more-express/ejs-demo/views/home.ejs
@@ -1,2 +1,6 @@
+<% include partials/header%>
+
 <h1>This is the homepage</h1>
 <img src="http://cdn1-www.cattime.com/assets/uploads/gallery/maine-coon-cats-and-kittens/maine-coon-cats-and-kittens-5.jpg">
+
+<% include partials/footer%>
