--- a/more-express/ejs-demo/views/love.ejs
+++ b/more-express/ejs-demo/views/love.ejs
@@ -1,3 +1,6 @@
+
+<% include partials/header%>
+
 <h1>You fell in love with: <%= thingVar %></h1>
 <% if (thingVar.toLowerCase() === "fern") { %>
 	<p>Good choice, fern is the best</p>
@@ -5,3 +8,5 @@
 	<p>Bad choice, you should have said fern</p>
 <% } %>
 <p>P.S. this is the love.ejs file!</p>
+
+<% include partials/footer%>
